fix css for cropped shadow in cards

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,7 +1,6 @@
 .app {
   margin: auto;
   height: 100vh;
-  /* z-index: -5; */
   padding: 0 40px 0 40px;
 }
 
@@ -11,27 +10,24 @@
   height: calc(100vh);
   padding-top: 40px;
   padding-left: 90px;
-  /* z-index: 0; */
 }
 
 .viewport-left {
   display: flex;
   flex-direction: column;
   padding-right: 70px;
-  /* z-index: -1; */
 }
 
 .viewport-right {
-  padding-left: 50px;
+  padding-left: 20px;
   display: flex;
   flex-direction: column;
-  padding-right: 200px;
-  /* z-index: -1; */
 }
 .viewport-right-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-left: 30px;
 }
 .viewport-right-header h1 {
   font-size: 30px;
