--- a/my-app/src/components/jobsContainer/jobsSubheader.css
+++ b/my-app/src/components/jobsContainer/jobsSubheader.css
@@ -6,6 +6,8 @@
   display: flex;
   justify-content: space-between;
   height: 65px;
+  margin-left : 30px;
+  margin-right: 30px;
 }
 
 .jobs-subheader-left-section,
